--- a/ScrambledPass/Views/GeneratorView.xaml
+++ b/ScrambledPass/Views/GeneratorView.xaml
@@ -7,41 +7,41 @@
         d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel>
-            <CheckBox x:Name="chkb_randWords" Content="{DynamicResource UIWords}" ToolTip="{DynamicResource TipWords}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Click="CBRandomWordsPanel_Click"/>
-            <StackPanel x:Name="pnl_words" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" VerticalAlignment="Top" Width="248">
+            <CheckBox x:Name="chkRandomWords" Content="{DynamicResource UIWords}" ToolTip="{DynamicResource TipWords}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Click="CBRandomWordsPanel_Click"/>
+            <StackPanel x:Name="pnlWords" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" VerticalAlignment="Top" Width="248">
                 <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
                     <Label x:Name="lbl_wordCount" Content="{DynamicResource UIWordCount}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtb_wordCount" HorizontalAlignment="Left" Height="23" Text="5" VerticalAlignment="Center" Width="40"/>
+                    <TextBox x:Name="txtWordCount" HorizontalAlignment="Left" Height="23" Text="5" VerticalAlignment="Center" Width="40"/>
                 </StackPanel>
-                <CheckBox x:Name="chkb_randLetterSize" Content="{DynamicResource UIRandomizeLetterSize}" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="chkRandomLetterSize" Content="{DynamicResource UIRandomizeLetterSize}" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Top"/>
             </StackPanel>
-            <CheckBox x:Name="chkb_randChars" Content="{DynamicResource UICharacters}" ToolTip="{DynamicResource TipCharacters}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click" IsChecked="True"/>
-            <StackPanel x:Name="pnl_chars" Orientation="Horizontal">
+            <CheckBox x:Name="chkRandomChars" Content="{DynamicResource UICharacters}" ToolTip="{DynamicResource TipCharacters}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click" IsChecked="True"/>
+            <StackPanel x:Name="pnlChars" Orientation="Horizontal">
                 <StackPanel x:Name="pnl_charsOptions" HorizontalAlignment="Left" Height="120" Margin="30,0,0,0" VerticalAlignment="Top" Width="270">
-                    <CheckBox x:Name="chkb_randLower" Content="a-z" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
-                    <CheckBox x:Name="chkb_randUpper" Content="A-Z" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
-                    <CheckBox x:Name="chkb_randNumbers" Content="0-9" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
-                    <CheckBox x:Name="chkb_randSpcChar" Content="{DynamicResource UISymbols}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
+                    <CheckBox x:Name="chkRandomLower" Content="a-z" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
+                    <CheckBox x:Name="chkRandomUpper" Content="A-Z" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
+                    <CheckBox x:Name="chkRandomNumbers" Content="0-9" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
+                    <CheckBox x:Name="chkRandomSpecialChar" Content="{DynamicResource UISymbols}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CBRandomCharactersPanel_Click"/>
                     <Separator Height="10" Margin="0"/>
-                    <RadioButton x:Name="rb_replaceWhiteChar" Content="{DynamicResource UIReplaceSpacing}" IsChecked="True" GroupName="charPositioning" Tag="0" Checked="RBCharacterMode_Checked"/>
-                    <RadioButton x:Name="rb_replaceRandChar" Content="{DynamicResource UIReplaceCharacters}" GroupName="charPositioning" Tag="1" Checked="RBCharacterMode_Checked"/>
-                    <RadioButton x:Name="rb_randPos" Content="{DynamicResource UIRandomPosition}" GroupName="charPositioning" Tag="2" Checked="RBCharacterMode_Checked"/>
+                    <RadioButton x:Name="rbReplaceWhiteChar" Content="{DynamicResource UIReplaceSpacing}" IsChecked="True" GroupName="charPositioning" Tag="0" Checked="RBCharacterMode_Checked"/>
+                    <RadioButton x:Name="rbReplaceRandomChar" Content="{DynamicResource UIReplaceCharacters}" GroupName="charPositioning" Tag="1" Checked="RBCharacterMode_Checked"/>
+                    <RadioButton x:Name="rbRandomPos" Content="{DynamicResource UIRandomPosition}" GroupName="charPositioning" Tag="2" Checked="RBCharacterMode_Checked"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Height="30" VerticalAlignment="Top" Width="127" Orientation="Horizontal" Margin="0,-15,-10,0">
                     <Label x:Name="lbl_charCount" Content="{DynamicResource UICharacterCount}" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtb_charCount" HorizontalAlignment="Right" Height="22" Text="5" VerticalAlignment="Center" Width="25" Margin="0,4"/>
+                    <TextBox x:Name="txtCharCount" HorizontalAlignment="Right" Height="22" Text="5" VerticalAlignment="Center" Width="25" Margin="0,4"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Center" Margin="0" HorizontalAlignment="Right">
                 <Label x:Name="lbl_pass" Content="{DynamicResource UIPassword}" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Center"/>
-                <TextBox x:Name="txtb_passTarget" Height="23" Margin="10,0" VerticalAlignment="Center" Width="350" TextChanged="TAPassword_TextChanged" HorizontalAlignment="Left"/>
+                <TextBox x:Name="txtPassword" Height="23" Margin="10,0" VerticalAlignment="Center" Width="350" TextChanged="TAPassword_TextChanged" HorizontalAlignment="Left"/>
             </StackPanel>
             <StackPanel Margin="0,-5,10,0" HorizontalAlignment="Right">
-                <Label x:Name="lbl_passEntropy" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
-                <Label x:Name="lbl_passStrength" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
+                <Label x:Name="lblPasswordEntropy" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
+                <Label x:Name="lblPasswordStrength" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
-                <Button x:Name="btn_generate" Content="{DynamicResource UIGenerate}" ToolTip="{DynamicResource TipPasswordGeneration}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" Click="BtnGeneratePassword_Click"/>
+                <Button x:Name="btnGenerate" Content="{DynamicResource UIGenerate}" ToolTip="{DynamicResource TipPasswordGeneration}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" Click="BtnGeneratePassword_Click"/>
                 <Button ToolTip="{DynamicResource TipWordList}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="BtnLoadCustomWordList_Click" BorderBrush="#00707070" >
                     <Button.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/open_file.PNG" Stretch="Uniform"/>
