Changed to binding, refactor, added param randomization

--- a/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
+++ b/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
@@ -14,9 +14,8 @@
 			<StackPanel x:Name="WordPanel" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" Width="248" Spacing="5">
 			<StackPanel Orientation="Horizontal" Spacing="10">
 					<Label Content="{Binding UICharacterCount}" />
-					<NumericUpDown x:Name="WordCount" Height="23" Width="200" Value="5" FormatString="0" Minimum="1"/>
+					<NumericUpDown x:Name="WordCount" Height="23" Width="200" Value="{Binding Generator.Parameters.WordCount}" FormatString="0" Minimum="1"/>
 			</StackPanel>
-			<StackPanel x:Name="WordPanel" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" Width="248">
 				<CheckBox x:Name="EnableRandomLetterSize" Content="{Binding EnableRandomLetterSize}" Margin="5,5,0,0" VerticalAlignment="Top"/>
 			</StackPanel>
 		</StackPanel>
@@ -26,20 +25,20 @@
 			<StackPanel x:Name="CharacterPanel" Margin="30,0,0,0" Spacing="10">
 				<StackPanel Orientation="Horizontal" Spacing="5">
 					<Label Content="{Binding UICharacterCount}" />
-					<NumericUpDown x:Name="CharacterCount" HorizontalAlignment="Left" Height="23" Width="200" Value="5" FormatString="0" Minimum="1"/>
+					<NumericUpDown x:Name="CharacterCount" HorizontalAlignment="Left" Height="23" Width="200" Value="{Binding Generator.Parameters.SymbolCount}" FormatString="0" Minimum="1"/>
 			</StackPanel>
 				<StackPanel HorizontalAlignment="Left" Height="35" Orientation="Horizontal" Spacing="10">
 						<Label x:Name="SymbolModeLabel" Content="{Binding SymbolMode}" VerticalAlignment="Center"/>
-						<ComboBox x:Name="SymbolMode" SelectedIndex="0">
+					<ComboBox x:Name="SymbolMode" SelectedIndex="{Binding Generator.Parameters.SymbolMode}">
 							<ComboBoxItem Content="{Binding UIRandomPosition}"/>
 							<ComboBoxItem Content="{Binding UIReplaceSpacing}"/>
 							<ComboBoxItem Content="{Binding UIReplaceCharacters}"/>
 						</ComboBox>
 					</StackPanel>
-					<CheckBox x:Name="EnableRandomLowerLetters" Content="a-z" IsChecked="True" />
-					<CheckBox x:Name="EnableRandomUpperLetters" Content="A-Z" IsChecked="True" />
-					<CheckBox x:Name="EnableRandomNumbers" Content="0-9" IsChecked="True" />
-					<CheckBox x:Name="EnableSymbols" Content="{Binding Symbols}" IsChecked="True" />
+				<CheckBox x:Name="EnableRandomLowerLetters" Content="a-z" IsChecked="{Binding Generator.Parameters.UseLetters}"/>
+				<CheckBox x:Name="EnableRandomUpperLetters" Content="A-Z" IsChecked="{Binding Generator.Parameters.UseCapitalLetters}"/>
+				<CheckBox x:Name="EnableRandomNumbers" Content="0-9" IsChecked="{Binding Generator.Parameters.UseNumbers}"/>
+				<CheckBox x:Name="EnableSymbols" Content="{Binding Symbols}" IsChecked="{Binding Generator.Parameters.UseSymbols}"/>
 			</StackPanel>
 		</StackPanel>
 		<Separator Height="100" Opacity="0"/>
@@ -55,6 +54,7 @@
 		</StackPanel>
 		<StackPanel Orientation="Horizontal" Margin="5,5,5,5">
 			<Button Content="{Binding UIGenerate}" HorizontalAlignment="Left" Click="GeneratePassword"/>
+			<Button Content="{Binding UIRandomize}" HorizontalAlignment="Left" Click="RandomizeParameters"/>
 			<Separator Margin="0" Opacity="0" Width="270"/>
 			<Button HorizontalAlignment="Left" Margin="10,0,0,0" Height="20" Width="20" Click="OpenFilePicker">
 					<Button.Background>
