Implemented runtime localization, language selection from UI

--- a/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
+++ b/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
@@ -6,7 +6,7 @@
         x:Class="ScrambledPass.DesktopApp.Views.GeneratorView"
         x:DataType="vm:GeneratorViewModel"
         x:CompileBindings="True"
-        xmlns:lang="clr-namespace:ScrambledPass.DesktopApp.Assets.Localization"
+        xmlns:lang="clr-namespace:ScrambledPass.DesktopApp.Logic"
         mc:Ignorable="d">
 	<Design.DataContext>
 		<vm:GeneratorViewModel />
@@ -14,40 +14,40 @@
 
 	<StackPanel>
 		<StackPanel>
-			<CheckBox x:Name="EnableRandomWords" Content="{Binding EnableRandomWords}" Margin="10,10,0,0" IsChecked="True" Click="ToggleWordPanel"/>
+			<CheckBox x:Name="EnableRandomWords" Content="{lang:Localize EnableRandomWords}" Margin="10,10,0,0" IsChecked="True" Click="ToggleWordPanel"/>
 			<StackPanel x:Name="WordPanel" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" Width="248" Spacing="5">
 				<StackPanel Orientation="Horizontal" Spacing="10">
-					<Label Content="{Binding UICharacterCount}" />
+					<Label Content="{lang:Localize CharacterCount}" />
 					<NumericUpDown x:Name="WordCount" Height="23" Width="200" Value="{Binding Generator.Parameters.WordCount}" FormatString="0" Minimum="1"/>
 				</StackPanel>
-				<CheckBox x:Name="EnableRandomLetterSize" Content="{Binding EnableRandomLetterSize}" Margin="5,5,0,0" VerticalAlignment="Top"/>
+				<CheckBox x:Name="EnableRandomLetterSize" Content="{lang:Localize EnableRandomLetterSize}" Margin="5,5,0,0" VerticalAlignment="Top"/>
 			</StackPanel>
 		</StackPanel>
 		<StackPanel>
-			<CheckBox x:Name="EnableRandomCharacters" Content="{Binding EnableRandomCharacters}" Margin="10,10,0,0" IsChecked="True" Click="ToggleSymbolPanel"/>
+			<CheckBox x:Name="EnableRandomCharacters" Content="{lang:Localize EnableRandomCharacters}" Margin="10,10,0,0" IsChecked="True" Click="ToggleSymbolPanel"/>
 			<StackPanel x:Name="CharacterPanel" Margin="30,0,0,0" Spacing="10">
 				<StackPanel Orientation="Horizontal" Spacing="5">
-					<Label Content="{Binding UICharacterCount}" />
+					<Label Content="{lang:Localize CharacterCount}" />
 					<NumericUpDown x:Name="CharacterCount" HorizontalAlignment="Left" Height="23" Width="200" Value="{Binding Generator.Parameters.SymbolCount}" FormatString="0" Minimum="1"/>
 				</StackPanel>
 				<StackPanel HorizontalAlignment="Left" Height="35" Orientation="Horizontal" Spacing="10">
-					<Label x:Name="SymbolModeLabel" Content="{Binding SymbolMode}" VerticalAlignment="Center"/>
+					<Label x:Name="SymbolModeLabel" Content="{lang:Localize SymbolMode}" VerticalAlignment="Center"/>
 					<ComboBox x:Name="SymbolMode" SelectedIndex="{Binding Generator.Parameters.SymbolMode}">
-						<ComboBoxItem Content="{Binding UIRandomPosition}"/>
-						<ComboBoxItem Content="{Binding UIReplaceSpacing}"/>
-						<ComboBoxItem Content="{Binding UIReplaceCharacters}"/>
+						<ComboBoxItem Content="{lang:Localize RandomPosition}"/>
+						<ComboBoxItem Content="{lang:Localize ReplaceSpacing}"/>
+						<ComboBoxItem Content="{lang:Localize ReplaceCharacters}"/>
 					</ComboBox>
 				</StackPanel>
 				<CheckBox x:Name="EnableRandomLowerLetters" Content="a-z" IsChecked="{Binding Generator.Parameters.UseLetters}"/>
 				<CheckBox x:Name="EnableRandomUpperLetters" Content="A-Z" IsChecked="{Binding Generator.Parameters.UseCapitalLetters}"/>
 				<CheckBox x:Name="EnableRandomNumbers" Content="0-9" IsChecked="{Binding Generator.Parameters.UseNumbers}"/>
-				<CheckBox x:Name="EnableSymbols" Content="{Binding Symbols}" IsChecked="{Binding Generator.Parameters.UseSymbols}"/>
+				<CheckBox x:Name="EnableSymbols" Content="{lang:Localize Symbols}" IsChecked="{Binding Generator.Parameters.UseSymbols}"/>
 			</StackPanel>
 		</StackPanel>
 		<Separator Height="100" Opacity="0"/>
 		<StackPanel>
 			<StackPanel Orientation="Horizontal" Height="50">
-				<Label Content="{Binding UIPassword}" Margin="12,0,0,0" VerticalAlignment="Center"/>
+				<Label Content="{lang:Localize Password}" Margin="12,0,0,0" VerticalAlignment="Center"/>
 				<TextBox x:Name="Password" Height="23" Width="350" Margin="10,0" VerticalAlignment="Center"/>
 			</StackPanel>
 			<StackPanel Height="50">
@@ -56,8 +56,8 @@
 			</StackPanel>
 		</StackPanel>
 		<StackPanel Orientation="Horizontal" Margin="5,5,5,5">
-			<Button Content="{Binding UIGenerate}" HorizontalAlignment="Left" Click="GeneratePassword"/>
-			<Button Content="{Binding UIRandomize}" HorizontalAlignment="Left" Click="RandomizeParameters"/>
+			<Button Content="{lang:Localize Generate}" HorizontalAlignment="Left" Click="GeneratePassword"/>
+			<Button Content="{lang:Localize Randomize}" HorizontalAlignment="Left" Click="RandomizeParameters"/>
 			<Separator Margin="0" Opacity="0" Width="270"/>
 			<Button HorizontalAlignment="Left" Margin="10,0,0,0" Height="20" Width="20" Click="OpenFilePicker">
 					<Button.Background>
