--- a/ScrambledPass.DesktopApp/Views/SettingsView.axaml
+++ b/ScrambledPass.DesktopApp/Views/SettingsView.axaml
@@ -12,7 +12,7 @@
 	</Design.DataContext>
 
     <Grid>
-        <StackPanel>
+        <StackPanel Spacing="10">
             <StackPanel Orientation="Horizontal" Margin="0,10">
                 <Label Content="{lang:Localize Language}"/>
                 <ComboBox x:Name="LanguageSelector" ItemsSource="{Binding LanguageList}" SelectionChanged="ChangeLanguage" SelectedIndex="{Binding SelectedLanguage}"/>
@@ -22,25 +22,24 @@
                 <ComboBox x:Name="cboTheme"/>
             </StackPanel>
             <CheckBox x:Name="chkLoadCustomWordList" Content="{lang:Localize LoadWordList}" Margin="3,0,0,0" />
-            <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal">
                 <Label Content="{lang:Localize DefaultWordCount}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <NumericUpDown HorizontalAlignment="Left" Width="200" Value="{Binding Generator.DefaultWordCount}" FormatString="0" Minimum="1"/>
+                <NumericUpDown HorizontalAlignment="Right" Width="200" Value="{Binding Generator.DefaultWordCount}" FormatString="0" Minimum="1"/>
             </StackPanel>
-            <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
                 <Label Content="{lang:Localize DefaultCharacterCount}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                 <NumericUpDown HorizontalAlignment="Left" Width="200" Value="{Binding Generator.DefaultSymbolCount}" FormatString="0" Minimum="1"/>
             </StackPanel>
             <StackPanel>
                 <CheckBox Content="{lang:Localize ClearClipboard}" Margin="3,0,0,0" />
-                <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
-                    <Label Content="{lang:Localize ClearClipboardDelay}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                    <TextBox x:Name="txtClearClipboardDelay" HorizontalAlignment="Left" Height="23" Text="25" VerticalAlignment="Center" Width="40"/>
+                <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
+                    <Label Content="{lang:Localize ClearClipboardDelay}" VerticalAlignment="Center"/>
+                    <TextBox x:Name="txtClearClipboardDelay" HorizontalAlignment="Left" Text="25" VerticalAlignment="Center" Width="40"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,10,5" >
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,5" >
                 <Button Content="{lang:Localize Save}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="SaveSettings" Margin="0,0,10,0"/>
                 <Button Content="{lang:Localize RestoreDefault}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0"/>
-                <Button Content="{lang:Localize Back}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="CloseSettingsView"/>
             </StackPanel>
         </StackPanel>
     </Grid>
