--- a/ScrambledPass.DesktopApp/Views/SettingsView.axaml
+++ b/ScrambledPass.DesktopApp/Views/SettingsView.axaml
@@ -15,7 +15,7 @@
         <StackPanel Spacing="10">
             <StackPanel Orientation="Horizontal" Margin="0,10">
                 <Label Content="{lang:Localize Language}"/>
-                <ComboBox x:Name="LanguageSelector" ItemsSource="{Binding LanguageList}" SelectionChanged="ChangeLanguage" SelectedIndex="{Binding SelectedLanguage}"/>
+                <ComboBox x:Name="LanguageSelector" ItemsSource="{Binding LanguageList}" SelectionChanged="ChangeLanguage" SelectedIndex="{Binding AppSettings.SelectedLanguage}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Label Content="{lang:Localize Theme}"/>
@@ -24,11 +24,11 @@
             <CheckBox x:Name="chkLoadCustomWordList" Content="{lang:Localize LoadWordList}" Margin="3,0,0,0" />
             <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal">
                 <Label Content="{lang:Localize DefaultWordCount}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <NumericUpDown HorizontalAlignment="Right" Width="200" Value="{Binding Generator.DefaultWordCount}" FormatString="0" Minimum="1"/>
+                <NumericUpDown HorizontalAlignment="Right" Width="200" Value="{Binding AppSettings.DefaultWordCount}" FormatString="0" Minimum="1"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
                 <Label Content="{lang:Localize DefaultCharacterCount}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <NumericUpDown HorizontalAlignment="Left" Width="200" Value="{Binding Generator.DefaultSymbolCount}" FormatString="0" Minimum="1"/>
+                <NumericUpDown HorizontalAlignment="Left" Width="200" Value="{Binding AppSettings.DefaultSymbolCount}" FormatString="0" Minimum="1"/>
             </StackPanel>
             <StackPanel>
                 <CheckBox Content="{lang:Localize ClearClipboard}" Margin="3,0,0,0" />
